@@ -1978,7 +1978,6 @@ char *data;
 			return 0;
 		}
 		if (!(hp = gethostbyname(localname))) {
-			extern int h_errno;
 			reply(501, "couldn't canonicalize local hostname (%d)\n", h_errno);
 			syslog(LOG_ERR, "Couldn't canonicalize local hostname (%d)", h_errno);
 			return 0;
