@@ -1,3 +1,10 @@
+1998-07-05    <hartmans@fundsxpress.com>
+
+	* update_utmp.c (pty_update_utmp): If the ut_exit differs test
+	indicates the structures differ, and we don't have a special case,
+	do nothing rather than trying to copy the field.  It's not worth
+	breaking the build over.
+
 Mon Apr  6 19:35:33 1998  Tom Yu  <tlyu@voltage-multiplier.mit.edu>
 
 	* update_utmp.c (pty_update_utmp): Don't record LOGIN_PROCESS
