@@ -1,3 +1,7 @@
+1998-07-05    <hartmans@fundsxpress.com>
+
+	* client.c (main): do not declare h_errno
+
 Wed Feb 18 15:39:14 1998  Tom Yu  <tlyu@mit.edu>
 
 	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
